--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "pods": "cd ios ; pod install",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "nodejs-mobile-react-native": "^16.17.10",
     "react": "18.2.0",
     "react-native": "0.72.4"
   },
@@ -31,6 +33,6 @@
     "typescript": "4.8.4"
   },
   "engines": {
-    "node": ">=16"
+    "node": "16.x"
   }
 }
